# software-design

./: .gitignore
task1/src/: lib.rs  linked_list.rs
task1/tests/: lru_cache.rs
task2/: Cargo.toml
task2/src/: hashtag_statistics.rs  lib.rs  main.rs  vk_api.rs
task2/tests/: mock.rs  stub.rs
task3/: pom.xml
task3/src/main/java/ru/akirakozov/sd/refactoring/: Main.java
task3/src/main/java/ru/akirakozov/sd/refactoring/gateways/: HTMLRenderer.java  ProductRepository.java  ProductSQLRepository.java  Renderer.java
task3/src/main/java/ru/akirakozov/sd/refactoring/model/: Product.java  ProductIn.java
task3/src/main/java/ru/akirakozov/sd/refactoring/model/query/: MaxPriceProductResult.java  MinPriceProductResult.java  (+3 more)
task3/src/main/java/ru/akirakozov/sd/refactoring/service/: ProductService.java
task3/src/main/java/ru/akirakozov/sd/refactoring/servlet/: AddProductServlet.java  GetProductsServlet.java  QueryServlet.java
task3/src/test/java/ru/akirakozov/sd/refactoring/: Utils.java
task3/src/test/java/ru/akirakozov/sd/refactoring/servlet/: AddProductServletTest.java  GetProductsServletTest.java  QueryServletTest.java
task4/: Cargo.toml
task4/src/: controller.rs  dao.rs  dep_middleware.rs  error.rs  main.rs  model.rs  view.rs
task4/src/model/: task.rs  task_list.rs
task4/templates/: error.html  list.html  lists.html
task5/: Cargo.toml
task5/src/: drawing.rs  graph.rs  main.rs  shape.rs
task6/: Cargo.toml
task6/src/: lib.rs  main.rs  tokenizer.rs  visitors.rs
task8/: Cargo.toml
task8/src/: lib.rs
task8/tests/: event_statistic.rs
