[package]
name = "task2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
async-trait = "0.1.58"
reqwest = { version = "0.11.12", features = ["json"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
futures = "0.3.25"
clap = { version = "4.0.23", features = ["derive"] }

[dev-dependencies]
wiremock = "0.5.15"
