[package]
name = "task4"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
async-trait = "0.1.58"
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
tokio-postgres = "0.7.7"
deadpool-postgres = { version = "0.10.3", features = ["serde"] }
futures = "0.3.25"
thiserror = "1.0.37"
anyhow = "1.0.66"
askama = "0.11.1"
askama_actix = "0.13.0"
